force-app/main/default/objects/Activity/fields/Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration__c</fullName>
    <formula>IF ( NOT(ISBLANK(Actual_End_Time__c)) &amp;&amp; NOT(ISBLANK(Expected_Start_Time__c )),
TEXT(
    FLOOR( 
          Actual_End_Time__c - Expected_Start_Time__c 
    )
) &amp; &quot; DAYS &quot; &amp;
TEXT(
    FLOOR(
         (( Actual_End_Time__c - Expected_Start_Time__c ) -
          FLOOR( Actual_End_Time__c - Expected_Start_Time__c )
          )*24
    )
) &amp; &quot; HOURS &quot; &amp;
TEXT (
    FLOOR(
             (
                  (
                     ( Actual_End_Time__c - Expected_Start_Time__c ) -
                     FLOOR( Actual_End_Time__c - Expected_Start_Time__c )
                   ) * 24
                   -
                   FLOOR(
                             (
                                 ( Actual_End_Time__c - Expected_Start_Time__c ) -
                                 FLOOR( Actual_End_Time__c - Expected_Start_Time__c )
                              ) * 24
                   )
               ) * 60
   )
) &amp; &quot; MINS &quot;, 
/* ELSE */
&quot;&quot;)</formula>
    <label>Actual Duration</label>
    <type>Text</type>
</CustomField>