force-app/main/default/objects/Activity/fields/Current_Update__c.field-meta.xml
<CustomField>
    <fullName>Current_Update__c</fullName>
    <label>Current Update</label>
    <type>TextArea</type>
</CustomField>