force-app/main/default/objects/Activity/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <formula>IF( NOT(ISBLANK(Expected_End_Time__c)) &amp;&amp; NOT(ISBLANK(Expected_Start_Time__c)), 
TEXT(
    FLOOR( 
         Expected_End_Time__c - Expected_Start_Time__c
    )
) &amp; &quot; DAYS &quot; &amp;
TEXT(
    FLOOR(
         ((Expected_End_Time__c - Expected_Start_Time__c) -
          FLOOR(Expected_End_Time__c - Expected_Start_Time__c)
          )*24
    )
) &amp; &quot; HOURS &quot; &amp;
TEXT (
    FLOOR(
             (
                  (
                     (Expected_End_Time__c - Expected_Start_Time__c) -
                     FLOOR(Expected_End_Time__c - Expected_Start_Time__c)
                   ) * 24
                   -
                   FLOOR(
                             (
                                 (Expected_End_Time__c - Expected_Start_Time__c) -
                                 FLOOR(Expected_End_Time__c - Expected_Start_Time__c)
                              ) * 24
                   )
               ) * 60
   )
) &amp; &quot; MINS &quot;,
/* ELSE */
&quot;&quot;
)</formula>
    <label>Estimated Duration</label>
    <type>Text</type>
</CustomField>