force-app/main/default/objects/Activity/fields/Expected_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Time__c</fullName>
    <label>Expected End Time</label>
    <type>DateTime</type>
</CustomField>