force-app/main/default/objects/Activity/fields/Is_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Delayed__c</fullName>
    <formula>IF ( ISBLANK(Actual_End_Time__c) , 
     IF( 
         Expected_End_Time__c &lt; NOW(),
         true,
         false
     ),
     IF(
         Expected_End_Time__c &lt; Actual_End_Time__c,
         true,
         false
     )
)</formula>
    <label>Is Delayed?</label>
    <type>Checkbox</type>
</CustomField>