force-app/main/default/objects/Activity/fields/Success_Step__c.field-meta.xml
<CustomField>
    <fullName>Success_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Step</label>
    <referenceTo>Success_Steps__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>