force-app/main/default/objects/Activity/fields/Time_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Time_Delayed__c</fullName>
    <formula>IF ( 
     Expected_End_Time__c &lt; Actual_End_Time__c ,
     TEXT(
          FLOOR(
             Actual_End_Time__c - Expected_End_Time__c          )
     ) &amp; &quot; DAYS &quot; &amp; 
     TEXT(
          FLOOR(
                MOD(
                      (Actual_End_Time__c - Expected_End_Time__c)*24
                       , 
                       24
                )
          )
     ) &amp; &quot; HOURS &quot; &amp; 
     TEXT(
          FLOOR(
                MOD(
                      (Actual_End_Time__c - Expected_End_Time__c)*24*60
                       , 
                       60
                )
          )
     ) &amp; &quot; MINS &quot;
   , 
  /* ELSE */
  &quot;0 DAYS 0 HOURS 0 MINS&quot;
)</formula>
    <inlineHelpText>Delay will show when Actual Date Time has a value.</inlineHelpText>
    <label>Time Delayed</label>
    <type>Text</type>
</CustomField>